fill null in Origin with Exporter

--- a/CITES_dataCleanup_GZ.ipynb
+++ b/CITES_dataCleanup_GZ.ipynb
@@ -1155,14 +1155,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#######################################################\n",
@@ -1199,6 +1203,11 @@
     "\n",
     "#drop the row with 0 quality\n",
     "deduped_df=deduped_df.drop(deduped_df[deduped_df['Importer reported quantity']==0].index)\n",
+    "\n",
+    "#fill blanks with values -- column 'Origin' has 72.05% \n",
+    "#after this step, only has 562 rows with null value\n",
+    "deduped_df['Origin'].fillna(deduped_df['Exporter'], inplace=True)\n",
+    "\n",
     "#deduped_df.shape\n",
     "#deduped_df.columns.values\n",
     "#######################################################"
